fix cors global 3